--- a/Aufgabe 0/index.html
+++ b/Aufgabe 0/index.html
@@ -4,7 +4,10 @@
 <meta charset="utf-8" />
 <title>Aufgabe 0</title>
 <body>
+<h1>Willkommen!</h1>
 
+<p>Bitte geben Sie hier Ihren Namen ein:</p>
+<input type="text" name="vorname" id="vorname">
 
 </body>
 </html>
