--- a/Aufgabe 0/index.html
+++ b/Aufgabe 0/index.html
@@ -3,11 +3,14 @@
 <head>
 <meta charset="utf-8" />
 <title>Aufgabe 0</title>
+<link href="style/stylesheet.css" rel="stylesheet"/>
+<script language="javascript" type="text/javascript" src="js/main.js"></script>
 <body>
 <h1>Willkommen!</h1>
 
-<p>Bitte geben Sie hier Ihren Namen ein:</p>
-<input type="text" name="vorname" id="vorname">
+<p>Geben Sie Ihren Namen ein, um eine Begrüßung zu erhalten:</p>
+<section onclick="namengeben()" id="button">Namen eingeben</section>
+<p id="test"></p>
 
 </body>
 </html>
