mau mau zufällige anzahl

--- a/Aufgabe2/index.html
+++ b/Aufgabe2/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-<meta charset="utf-8" />
+<meta charset="UTF-8" />
 <link rel="stylesheet" type="text/css" href="style/stylesheet.css">
+</head>
 <title>Mau Mau</title>
 <body>
 <header>
@@ -12,8 +13,10 @@
     <div id="Ablagestapel">Ablagestapel</div>
     <div id="Nachziehstapel">Nachziehstapel</div>
 </section>
-<section class="Handkarten">
-<div>Herz 7</div>
-</section>
+<div id="Handkarten">
+
+</div>
+
+<script src="./js/main.js"></script>
 </body>
 </html>
