--- a/Aufgabe2/index.html
+++ b/Aufgabe2/index.html
@@ -13,10 +13,11 @@
     <div id="Ablagestapel">Ablagestapel</div>
     <div id="Nachziehstapel">Nachziehstapel</div>
 </section>
-<div id="Handkarten">
+<section>
+<div id="Handkarten"></div>
+<button id="Sortierbutton">Karten sortieren</button>
+</section>
 
-</div>
-
-<script src="./js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
