--- a/Aufgabe3/index.html
+++ b/Aufgabe3/index.html
@@ -11,7 +11,7 @@
 </header>
 <section>
     <div id="Ablagestapel">Ablagestapel</div>
-    <div id="Nachziehstapel">Nachziehstapel</div>
+    <div id="Nachziehstapel" id="karteZiehen">Nachziehstapel</div>
 </section>
 <section>
 <div id="Handkarten"></div>
